test/invalid-syntax/66358_invalid_operator/invalid_operator.mag
-- Author: 66358, Gustavo Cardoso

fun f (x) : Int -> Bool = x == 0 | x == 1